--- a/syllabus/stat_211_f2018_syllabus.tex
+++ b/syllabus/stat_211_f2018_syllabus.tex
@@ -82,11 +82,11 @@ Fall 2018
 \\
 \textbf{Lectures:} &  Tue/Thu 12:45pm -- 2:00pm & & & & \textbf{Place:} & Blocker 150
 \\
-\textbf{Office hours:} & Mon/Wed 1:00pm -- 2:00pm   & & & & \textbf{Office:} & Blocker 455
+\textbf{Office hours:} & Mon/Wed 11:00am -- 12:00pm   & & & & \textbf{Office:} & Blocker 455
 \\\\
 \textbf{TA:} & Junsouk Choi & & & & \textbf{Email:} & \url{jchoi@stat.tamu.edu}
 \\
-\textbf{Office hours:} & Wed 10:00am - 12:00pm   & & & & \textbf{Office:} & Blocker 420 
+\textbf{Office hours:} & Wed 12:45pm - 2:45pm   & & & & \textbf{Office:} & Blocker 420 
 \end{tabular}
 \end{minipage}
 \rule{\textwidth}{0.4pt}
